--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,8 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="features">Features</string>
+    <string name="media">Media</string>
+    <string name="help_center">Help Center</string>
+    <string name="default_web_client_id">YOUR_CLIENT_ID_HERE</string>
 </resources>
